# Extract-data-from-old-pdf

./: .gitignore  BUILD_APP_NOW.md  CHANGELOG.md  CREATE_STANDALONE_APP.md  LICENSE  MIGRATION_GUIDE.md  QUICKSTART_MACOS.md  README.md  R_USAGE_GUIDE.md  START_HERE_MACOS.txt  TEST_REPORT.md  TEST_RESULTS.md  UI_README.md  app.py  build_macos_app.sh  create_automator_app.sh  create_standalone_app.sh  demo_config.yaml  demo_r_extraction.R  download_files.py  example_r_usage.R  extract_all_config.yaml  extract_complete.py  extract_generic_smart.py  extract_hierarchical.py  extract_improved.py  extract_multi_page_pdf.py  extract_smart_pdf.py  extract_text.py  extract_universal.py  launch_app.bat  launch_app.sh  launcher_app.py  process_census_pdf.R  pyproject.toml  requirements.txt  setup.py  setup_macos_app.py  test_config.yaml  test_environment.py  (+3 more)
docs/: DATA_FORMATS.md  USAGE.md
examples/: config_election_data.yaml  config_local_files.yaml  config_pakistan_census.yaml
src/pdf_data_extractor/: __init__.py  cli.py  config.py  converter.py  downloader.py  exporter.py  ocr_engine.py  parser.py  utils.py
